# 2025-p1-Clairewyx

./: README.md  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
