[tool.poetry]
name = "2025-p1-clairewyx"
version = "0.1.0"
description = ""
authors = ["Clairewyx <wangyixincr@163.com>"]
readme = "README.md"
packages = [{ include = "todo" }]

[tool.poetry.dependencies]
python = ">=3.12"
flask = "^3.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
